Pylint for all versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ script:
   - python -m pytest  # Run the tests without IPython.
   - pip install ipython
   - python -m pytest  # Now run the tests with IPython.
-  - if [[ $TRAVIS_PYTHON_VERSION != 3.6 ]]; then pylint fire --ignore=test_components_py3.py,parser_fuzz_test.py,console; fi
+  - pylint fire --ignore=test_components_py3.py,parser_fuzz_test.py,console
